# ryanartecona.github.io

./: .envrc  .gitignore  .gitmodules  .ruby-gemset  CNAME  Gemfile  LICENSE  Makefile  _config.yml  about.html  config.rb  index.html  posts.html  ra-hakyll.cabal  shell.nix  soupault.conf  stack.yaml  todo.md
_includes/: analytics  natural_date  real_number_of_words
_layouts/: default.html  post.html  redirect.html
_posts/: 2015-05-21-refactoring-in-ruby-in-haskell.md
_resources/: refactoring_1.lhs
_scss/: _baseline.scss  _globals.scss  main.scss
_scss/page/: _about.scss
_src/: site.hs
about/: index.html
blog/: index.html
css/: _baseline.scss  _globals.scss  _syntax.scss  main.css  main.scss  syntax.css
css/page/: _about.scss  _blog_index.scss
design/: RA_logo.pxm
downloads/: refactoring_1.lhs
draft/: engineering-manager-learnings.md  nix_syntax.adoc  nix_syntax.adoc.metadata
draft/nix_syntax/: index.html
draft/nix_syntax_old/: index.html
includes/: head.html  nav.html
nix/: sources.json
plugins/: chroma-fixup.lua  inline-include.lua  post-template.lua  pygmentize-fixup.lua  redirect.lua  section-link-highlight.lua  toc-fixup.lua
posts/: 2015-05-21-refactoring-in-ruby-in-haskell.md  index.html
scss/: _baseline.scss
scss/page/: _about.scss
site/: CNAME  about.html  index.html
site/blog/: index.html
site/blog/2015/: tooltip-01-tig.md  (+8 more)
site/css/: main.css
site/downloads/: refactoring_1.lhs
site/post/: 2013-10-26-decorated-anonymous-functions-in-python.md
src/: site.hs
templates/: default.html  post.html  redirect.html
(+22 files in other folders)
