name:                ra-hakyll
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/ryanartecona/ra-hakyll#readme
license:             BSD3
license-file:        LICENSE
author:              Ryan Artecona
maintainer:          ryanartecona@gmail.com
copyright:           Ryan Artecona
category:            Web
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

executable ra-hakyll
  hs-source-dirs:      _src
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.9.*,
                       flow == 1.*,
                       pandoc == 1.*,
                       pandoc-types == 1.*,
                       process == 1.4.*,
                       -- hakyll-sass == 0.2.*

                       -- inlined from hakyll-sass
                       -- need this until https://github.com/meoblast001/hakyll-sass/issues/8 is merged
                       aeson-pretty >= 0.8,
                       data-default-class >= 0.1.1,
                       hsass >= 0.2.0,
                       filepath >= 1.3.0
